// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkflowMetadata - private mode modal operates 1`] = `
<WorkflowMetadata
  api={
    Object {
      "setWorkflowPublic": [Function],
    }
  }
  isPublic={false}
  test_now={2017-09-20T21:03:52.000Z}
  workflow={
    Object {
      "id": 100,
      "last_update": 1505941432000,
      "owner_name": "Harry Harrison",
      "public": false,
      "read_only": false,
    }
  }
>
  <div>
    <ul
      className="WF-meta"
    >
      <div
        className="WF-meta--item"
      >
        <li
          className="content-3 t-m-gray"
        >
          by 
          Harry Harrison
        </li>
        <span
          className="content-3 metadataSeparator t-m-gray"
        >
          -
        </span>
      </div>
      <li
        className="WF-meta--item content-3 t-m-gray"
      >
        Updated 
        now
      </li>
      <li
        className="WF-meta--item content-3 t-m-gray"
      >
        <div
          className="WF-meta--item test-button"
          onClick={[Function]}
        >
          <div
            className="content-3 metadataSeparator t-m-gray"
          >
            -
          </div>
          <div
            className="t-f-blue"
          >
            private
          </div>
        </div>
      </li>
    </ul>
    <Modal
      autoFocus={true}
      backdrop={true}
      backdropTransitionTimeout={150}
      fade={true}
      isOpen={true}
      keyboard={true}
      modalTransitionTimeout={300}
      toggle={[Function]}
      zIndex={1050}
    />
  </div>
</WorkflowMetadata>
`;

exports[`WorkflowMetadata - private mode modal operates 2`] = `
<div
  className="modal-content"
>
  <ModalHeader
    className="dialog-header"
    tag="h4"
    toggle={[Function]}
    wrapTag="div"
  >
    <div
      className="dialog-header modal-header"
    >
      <h4
        className="modal-title"
      >
        <span
          className="t-d-gray title-4"
        >
          PRIVACY SETTING
        </span>
      </h4>
      <button
        aria-label="Close"
        className="close"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
  </ModalHeader>
  <ModalBody
    className="dialog-body"
    tag="div"
  >
    <div
      className="dialog-body modal-body"
    >
      <div
        className="row d-flex align-items-center mb-5"
      >
        <div
          className="col-sm-3"
        >
          <div
            className="action-button button-gray test-button-gray"
            onClick={[Function]}
          >
            Public
          </div>
        </div>
        <div
          className="col-sm-9"
        >
          <div
            className="info-2"
          >
            Anyone can access and duplicate the workflow or any of its modules
          </div>
        </div>
      </div>
      <div
        className="row d-flex align-items-center"
      >
        <div
          className="col-sm-3"
        >
          <div
            className="action-button button-full-blue"
            onClick={[Function]}
          >
            Private
          </div>
        </div>
        <div
          className="col-sm-9"
        >
          <div
            className="info-2"
          >
            Only you can access and edit the workflow
          </div>
        </div>
      </div>
    </div>
  </ModalBody>
  <div
    className="dialog-footer modal-footer"
  >
    <div
      className="action-button button-gray"
      onClick={[Function]}
    >
      Cancel
    </div>
  </div>
</div>
`;

exports[`WorkflowMetadata - private mode modal operates 3`] = `
<WorkflowMetadata
  api={
    Object {
      "setWorkflowPublic": [Function],
    }
  }
  isPublic={false}
  test_now={2017-09-20T21:03:52.000Z}
  workflow={
    Object {
      "id": 100,
      "last_update": 1505941432000,
      "owner_name": "Harry Harrison",
      "public": false,
      "read_only": false,
    }
  }
>
  <div>
    <ul
      className="WF-meta"
    >
      <div
        className="WF-meta--item"
      >
        <li
          className="content-3 t-m-gray"
        >
          by 
          Harry Harrison
        </li>
        <span
          className="content-3 metadataSeparator t-m-gray"
        >
          -
        </span>
      </div>
      <li
        className="WF-meta--item content-3 t-m-gray"
      >
        Updated 
        now
      </li>
      <li
        className="WF-meta--item content-3 t-m-gray"
      >
        <div
          className="WF-meta--item test-button"
          onClick={[Function]}
        >
          <div
            className="content-3 metadataSeparator t-m-gray"
          >
            -
          </div>
          <div
            className="t-f-blue"
          >
            public
          </div>
        </div>
      </li>
    </ul>
  </div>
</WorkflowMetadata>
`;

exports[`WorkflowMetadata - private mode renders correctly 1`] = `
<WorkflowMetadata
  api={
    Object {
      "setWorkflowPublic": [Function],
    }
  }
  isPublic={false}
  test_now={2017-09-20T21:03:52.000Z}
  workflow={
    Object {
      "id": 100,
      "last_update": 1505941432000,
      "owner_name": "Harry Harrison",
      "public": false,
      "read_only": false,
    }
  }
>
  <div>
    <ul
      className="WF-meta"
    >
      <div
        className="WF-meta--item"
      >
        <li
          className="content-3 t-m-gray"
        >
          by 
          Harry Harrison
        </li>
        <span
          className="content-3 metadataSeparator t-m-gray"
        >
          -
        </span>
      </div>
      <li
        className="WF-meta--item content-3 t-m-gray"
      >
        Updated 
        now
      </li>
      <li
        className="WF-meta--item content-3 t-m-gray"
      >
        <div
          className="WF-meta--item test-button"
          onClick={[Function]}
        >
          <div
            className="content-3 metadataSeparator t-m-gray"
          >
            -
          </div>
          <div
            className="t-f-blue"
          >
            private
          </div>
        </div>
      </li>
    </ul>
  </div>
</WorkflowMetadata>
`;

exports[`WorkflowMetadata - private mode renders correctly in read-only mode 1`] = `
<WorkflowMetadata
  api={
    Object {
      "setWorkflowPublic": [Function],
    }
  }
  isPublic={true}
  test_now={2017-09-20T21:03:52.000Z}
  workflow={
    Object {
      "id": 100,
      "last_update": 1505941432000,
      "owner_name": "Harry Harrison",
      "public": true,
      "read_only": true,
    }
  }
>
  <div>
    <ul
      className="WF-meta"
    >
      <div
        className="WF-meta--item"
      >
        <li
          className="content-3 t-m-gray"
        >
          by 
          Harry Harrison
        </li>
        <span
          className="content-3 metadataSeparator t-m-gray"
        >
          -
        </span>
      </div>
      <li
        className="WF-meta--item content-3 t-m-gray"
      >
        Updated 
        now
      </li>
      <li
        className="WF-meta--item content-3 t-m-gray"
      />
    </ul>
  </div>
</WorkflowMetadata>
`;
